--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
   "author": "Tushar Goyal (tgoyal63@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "winston": "^3.10.0"
   }
