feat: Update server config and add HTTP status codes
- Updated the server config to include a new property for the development environment.
- Added a new config file for HTTP status codes.
- Created a new middleware to handle API errors.
- Updated the database utility to log connection errors.
- Added a utility for creating custom error classes.
- Updated the logger utility to log to files based on the environment and log directory.

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Tushar Goyal (tgoyal63@gmail.com)",
@@ -22,5 +23,8 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
