--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Tushar Goyal (tgoyal63@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
